--- a/.zuul.yaml
+++ b/.zuul.yaml
@@ -4,12 +4,14 @@
       - build-openstack-docs-pti
     check:
       jobs:
+        - build-openstack-api-ref
         - build-openstack-releasenotes
         - openstack-tox-linters
         - openstack-tox-pep8:
             voting: false
     gate:
       jobs:
+        - build-openstack-api-ref
         - build-openstack-releasenotes
         - openstack-tox-linters
     post:
@@ -17,3 +19,4 @@
         - publish-stx-api-ref
         - publish-stx-tox
         - publish-stx-releasenotes
+        - publish-stx-docs
