--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,21 @@
 [tox]
-envlist = linters,pep8
+envlist = linters,pep8,py27-dev
 minversion = 2.3
 skipsdist = True
+
+[dc]
+dc_base_dir = .
+stx_fault_dir = ../../stx-fault
+
+
+nfv_client_src_dir = ../../stx-nfv/nfv/nfv-client
+fmclient_src_dir = {[dc]stx_fault_dir}/python-fmclient/fmclient
+fm_api_src_dir = {[dc]stx_fault_dir}/fm-api
+fm_common_src_dir = {[dc]stx_fault_dir}/fm-common/sources
+sysinv_src_dir = ../../stx-config/sysinv/sysinv/sysinv
+tsconfig_src_dir = ../../stx-update/tsconfig/tsconfig
+configutilities_src_dir = ../../stx-config/configutilities/configutilities
+cgtsclient_src_dir = ../../stx-config/sysinv/cgts-client/cgts-client
 
 [testenv]
 basepython = python3
@@ -12,9 +26,10 @@ setenv =
     OS_STDERR_CAPTURE=1
     OS_TEST_TIMEOUT=60
     CURRENT_CFG_FILE={toxinidir}/.current.cfg
-#    DATA_DIRECTORY={env:MY_REPO}/addons/wr-cgcs/layers/cgcs/extras.ND/ddt_data/distributed_cloud
 
 deps = -r{toxinidir}/test-requirements.txt
+       -r{toxinidir}/requirements.txt
+       keyring
 #deps = keyring
 #       -r{toxinidir}/requirements.txt
 #       -r{toxinidir}/test-requirements.txt
@@ -31,15 +46,35 @@ whitelist_externals =
     find
     reno
 
-[testenv:py27]
+[testenv:py27-dev]
 basepython = python2.7
+deps = -r{toxinidir}/test-requirements.txt
+       -r{toxinidir}/requirements.txt
+       keyring
+       -e{[dc]nfv_client_src_dir}
+       -e{[dc]sysinv_src_dir}
+       -e{[dc]tsconfig_src_dir}
+       -e{[dc]fmclient_src_dir}
+       -e{[dc]fm_api_src_dir}
+       -e{[dc]configutilities_src_dir}
+       -e{[dc]cgtsclient_src_dir}
+setenv =
+    CURRENT_CFG_FILE={toxinidir}/.current.cfg
+    DATA_DIRECTORY={toxinidir}/dcmanager/tests/data
+    SINGLE_REPO=True
+commands =
+    find {toxinidir} -not -path '{toxinidir}/.tox/*' -name '*.py[c|o]' -delete
+    python setup_ddt_tests.py testr --slowest --testr-args='{posargs}'
 
-[testenv:py27-single]
+[testenv:py27]
 basepython = python2.7
 setenv =
     CURRENT_CFG_FILE={toxinidir}/.current.cfg
-    DATA_DIRECTORY={env:MY_REPO}/addons/wr-cgcs/layers/cgcs/extras.ND/ddt_data/distributed_cloud
+    DATA_DIRECTORY={toxinidir}/dcmanager/tests/data
     SINGLE_REPO=True
+commands =
+    find {toxinidir} -not -path '{toxinidir}/.tox/*' -name '*.py[c|o]' -delete
+    python setup_ddt_tests.py testr --slowest --testr-args='{posargs}'
 
 [testenv:debug-py27]
 basepython = python2.7
